Implement notes history API
